--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.9",
+    "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
+    "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
+    "cors": "^2.8.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.7.0",
     "ngx-bootstrap": "^10.2.0",
@@ -33,6 +37,7 @@
     "@angular-devkit/build-angular": "^15.2.4",
     "@angular/cli": "~15.2.4",
     "@angular/compiler-cli": "^15.2.0",
+    "@angular/localize": "^15.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.16",
     "jasmine-core": "~4.5.0",
