--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.7.0",
     "ngx-bootstrap": "^10.2.0",
     "ngx-toastr": "^16.2.0",
+    "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
