--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.7.0",
+    "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^10.2.0",
     "ngx-toastr": "^16.2.0",
     "ngx-ui-loader": "^13.0.0",
