--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.2.0",
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "@popperjs/core": "^2.11.6",
+    "angular-file-saver": "^1.1.3",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
     "cors": "^2.8.5",
@@ -40,6 +41,7 @@
     "@angular/cli": "~15.2.4",
     "@angular/compiler-cli": "^15.2.0",
     "@angular/localize": "^15.2.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.16",
     "jasmine-core": "~4.5.0",
